projects/vb6parse/snapshots/parsers/cst/type_definitions/enum_statements/enum_preserves_whitespace.snap
---
source: projects/vb6parse/tests/type_definitions/enum_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: EnumStatement
      children:
        - kind: EnumKeyword
          text: Enum
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "        "
            - kind: Identifier
              text: Value1
            - kind: Whitespace
              text: " "
            - kind: EqualityOperator
              text: "="
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: EnumKeyword
          text: Enum
        - kind: Newline
          text: "\n"
